--- a/frontend/index.html
+++ b/frontend/index.html
@@ -171,6 +171,18 @@
                             >
                         </div>
 
+                        <div class="form-group">
+                            <label for="signatario-intermediario">CPF do Signatário *</label>
+                            <input
+                                type="text"
+                                id="signatario-intermediario"
+                                placeholder="000.000.000-00"
+                                maxlength="14"
+                                required
+                            >
+                            <small style="color: #666;">CPF de quem está assinando o documento (apenas números ou com formatação)</small>
+                        </div>
+
                         <button class="btn btn-primary" id="btn-enviar-peticao">
                             Enviar Petição
                         </button>
