--- a/frontend/login.html
+++ b/frontend/login.html
@@ -408,6 +408,7 @@
                     <select id="select-sistema-login">
                         <option value="1G_CIVIL" selected>Civil 1ª Instância</option>
                         <option value="1G_EXEC_FISCAL">Execução Fiscal</option>
+                        <option value="2G_CIVIL">Civil 2ª Instância (Recursal)</option>
                     </select>
                 </div>
 
